--- a/package.json
+++ b/package.json
@@ -12,23 +12,24 @@
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
     "@types/semver": "^6.2.0",
+    "@types/node": "^10",
+    "@yarnpkg/lockfile": "^1.1.0",
+    "@types/yarnpkg__lockfile": "^1.1.3",
     "semver": "^7.1.1",
-    "tslib": "^1"
+    "tslib": "^1",
+    "ts-node": "^8"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
     "@oclif/test": "^1",
     "@types/chai": "^4",
     "@types/mocha": "^5",
-    "@types/node": "^10",
-    "@types/yarnpkg__lockfile": "^1.1.3",
     "chai": "^4",
     "eslint": "^5.13",
     "eslint-config-oclif": "^3.1",
     "eslint-config-oclif-typescript": "^0.1",
     "mocha": "^5",
     "nyc": "^14",
-    "ts-node": "^8",
     "typescript": "^3.3"
   },
   "engines": {
