--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "collapse-yarn-lockfile",
   "description": "Collapse yarn.lock dependencies",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "Michael Brewer-Davis @michaelbrewerdavis",
   "bin": {
     "collapse-yarn-lockfile": "./bin/run"
@@ -11,13 +11,13 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
-    "@types/semver": "^6.2.0",
     "@types/node": "^10",
-    "@yarnpkg/lockfile": "^1.1.0",
+    "@types/semver": "^6.2.0",
     "@types/yarnpkg__lockfile": "^1.1.3",
+    "@yarnpkg/lockfile": "^1.1.0",
     "semver": "^7.1.1",
-    "tslib": "^1",
-    "ts-node": "^8"
+    "ts-node": "^8",
+    "tslib": "^1"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
