--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "collapse-yarn-lockfile",
   "description": "Collapse yarn.lock dependencies",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "author": "Michael Brewer-Davis @michaelbrewerdavis",
   "bin": {
     "collapse-yarn-lockfile": "./bin/run"
@@ -15,6 +15,7 @@
     "@types/semver": "^6.2.0",
     "@types/yarnpkg__lockfile": "^1.1.3",
     "@yarnpkg/lockfile": "^1.1.0",
+    "prompts": "^2.3.1",
     "semver": "^7.1.1",
     "ts-node": "^8",
     "tslib": "^1"
@@ -24,6 +25,7 @@
     "@oclif/test": "^1",
     "@types/chai": "^4",
     "@types/mocha": "^5",
+    "@types/prompts": "^2.0.3",
     "chai": "^4",
     "eslint": "^5.13",
     "eslint-config-oclif": "^3.1",
